--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,6 +7,7 @@
     flex-direction: row;
     max-width: 1200px;
     height: 450px;
+    margin-top: 40px;
 }
 
 .description-container {
@@ -26,38 +27,59 @@
     font-size: large;
 }
 
-
 .loader {
-    width: 320px;
-    height: 150px;
-    margin: auto;
-    display: block;
-    position: relative;
-    background: #FFF;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: 80px;
+    left: 40px;
+    animation: rotate 1s linear infinite
+}
+
+.loader::before,
+.loader::after {
+    content: "";
     box-sizing: border-box;
+    position: absolute;
+    inset: 0px;
+    border-radius: 50%;
+    border: 5px solid #FFF;
+    animation: prixClipFix 2s linear infinite;
 }
 
 .loader::after {
-    content: '';
-    width: calc(100% - 30px);
-    height: calc(100% - 30px);
-    top: 15px;
-    left: 15px;
-    position: absolute;
-    background-image: linear-gradient(100deg, transparent, rgba(255, 255, 255, 0.5) 50%, transparent 80%), linear-gradient(#DDD 56px, transparent 0), linear-gradient(#DDD 24px, transparent 0), linear-gradient(#DDD 18px, transparent 0), linear-gradient(#DDD 66px, transparent 0);
-    background-repeat: no-repeat;
-    background-size: 75px 130px, 55px 56px, 160px 30px, 260px 20px, 290px 56px;
-    background-position: 0% 0, 0 0, 70px 5px, 70px 38px, 0px 66px;
-    box-sizing: border-box;
-    animation: animloader 1s linear infinite;
+    transform: rotate3d(90, 90, 0, 180deg);
+    border-color: #FF3D00;
 }
 
-@keyframes animloader {
+@keyframes rotate {
     0% {
-        background-position: 0% 0, 0 0, 70px 5px, 70px 38px, 0px 66px;
+        transform: rotate(0deg)
     }
 
     100% {
-        background-position: 150% 0, 0 0, 70px 5px, 70px 38px, 0px 66px;
+        transform: rotate(360deg)
     }
+}
+
+@keyframes prixClipFix {
+    0% {
+        clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)
+    }
+
+    50% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)
+    }
+
+    75%,
+    100% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)
+    }
+}
+
+.is-hidden {
+    opacity: 0;
+    display: none;
+    visibility: hidden;
 }
